samples/_failures_safe/1761598058_8bc752_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd8f4fa2.c: In function ‘main’:
./samples/SAFE/__tmp_dd8f4fa2.c:164:13: error: expected declaration or statement at end of input
  164 |             case 1:
      |             ^~~~
./samples/SAFE/__tmp_dd8f4fa2.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dd8f4fa2.c:164:13: error: expected declaration or statement at end of input
